@@ -1,28 +1,29 @@
 package fun.dashspace.carrentalsystem.entity;
 
-import jakarta.validation.constraints.*;
-import org.springframework.data.annotation.LastModifiedDate;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import fun.dashspace.carrentalsystem.entity.base.BaseEntity;
+import fun.dashspace.carrentalsystem.enums.Gender;
+import fun.dashspace.carrentalsystem.enums.UserStatus;
 import jakarta.persistence.*;
+import jakarta.validation.constraints.*;
 import lombok.*;
+import lombok.experimental.SuperBuilder;
 
+import java.time.Instant;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-
-import fun.dashspace.carrentalsystem.entity.base.BaseEntity;
-import fun.dashspace.carrentalsystem.enums.GenderType;
-import fun.dashspace.carrentalsystem.enums.UserStatus;
 
 @Entity
-@Table(name = "user")
-@Data
+@Table(name = "users")
+@Getter
+@Setter
 @EqualsAndHashCode(callSuper = true, exclude = {"userRoles", "ownedCars", "trips", "sessions"})
+@ToString(callSuper = true, exclude = {"userRoles", "ownedCars", "trips", "sessions"})
 @NoArgsConstructor
 @AllArgsConstructor
-@Builder
+@SuperBuilder
 public class User extends BaseEntity {
 
     @Column(name = "username", length = 50, nullable = false, unique = true)
@@ -39,6 +40,7 @@ public class User extends BaseEntity {
     @Column(name = "password", nullable = false)
     @NotBlank(message = "Password is required")
     @Size(min = 8, message = "Password must be at least 8 characters")
+    @JsonIgnore
     private String password;
 
     @Column(name = "phone_number", length = 20)
@@ -51,7 +53,7 @@ public class User extends BaseEntity {
 
     @Enumerated(EnumType.STRING)
     @Column(name = "gender")
-    private GenderType gender;
+    private Gender gender;
 
     @Column(name = "avatar_url", length = 500)
     @Size(max = 500, message = "Avatar URL must not exceed 500 characters")
@@ -60,11 +62,12 @@ public class User extends BaseEntity {
     @Enumerated(EnumType.STRING)
     @Column(name = "status", nullable = false)
     @Builder.Default
-    private UserStatus status = UserStatus.active;
+    private UserStatus status = UserStatus.ACTIVE;
 
     @Column(name = "updated_at", insertable = false, updatable = false)
-    private LocalDateTime updatedAt;
+    private Instant updatedAt;
 
+    // == Relationships ==
     @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
     @Builder.Default
     private Set<UserRole> userRoles = new HashSet<>();
@@ -87,11 +90,23 @@ public class User extends BaseEntity {
     @Builder.Default
     private Set<Trip> trips = new HashSet<>();
 
+    // == Helpers ==
     public boolean isActive() {
-        return this.status == UserStatus.active;
+        return UserStatus.ACTIVE.equals(status);
+    }
+
+    public boolean isInactive() {
+        return UserStatus.INACTIVE.equals(status);
+    }
+
+    public boolean isBanned() {
+        return UserStatus.BANNED.equals(status);
     }
 
     public List<Role> getRoles() {
-        return userRoles.stream().map(UserRole::getRole).collect(Collectors.toList());
+        return userRoles.stream()
+                .map(UserRole::getRole)
+                .toList();
     }
+
 }
